----------------------------------------------------------------------
 OmegaT 1.7.3 update 1 Changes
----------------------------------------------------------------------

1.7.3 update 1 vs. 1.7.3


  0 Enhancement
  2 Bugfixes

----------------------------------------------------------------------
1.7.3 update 1

  Bug fixes:

  - HTML entities not resolved in the XHTML filter 
  http://sourceforge.net/support/tracker.php?aid=1844968 

  - Prevent non-XML characters from entering the TMX 
  http://sourceforge.net/support/tracker.php?aid=1684825 

----------------------------------------------------------------------
 OmegaT 1.7.3 Changes
----------------------------------------------------------------------

1.7.3 vs. 1.7.2


  6 Enhancements
  3 Bugfixes

----------------------------------------------------------------------
1.7.3


Contains a revised manual, two new localisations (Danish, polish) and bug fixes

 Other enhancements:
 
 - Revised manual

 - Danish 1.6.2 localisation + instant start
 - Polish 1.6.2 localisation + partial manual
 - Catalan localisation updated to 1.7.2
 - Belarusian UI updated to 1.7.2
 - French localisation updated to 1.7.3

 Bug fixes:
  
  - Properties: space before "=" shouldn't be part of the key  
  http://sourceforge.net/support/tracker.php?aid=1812183

  - <context> should be ignored in XLIFF files  
  http://sourceforge.net/support/tracker.php?aid=1800677

  - Footnotes break segments in OOo 1.x documents  
  http://sourceforge.net/support/tracker.php?aid=1812385

----------------------------------------------------------------------
 OmegaT 1.7.2 Changes
----------------------------------------------------------------------

1.7.2 vs. 1.7.1


  11 Enhancements
   7 Bugfixes

----------------------------------------------------------------------
1.7.2


Contains three new localisations (Simplified Chinese, Traditional Chinese and Czech) and bug fixes

 Implemented requests:
  