@@ -5,12 +5,19 @@
 1.7.3 update 1 vs. 1.7.3
 
 
-  0 Enhancement
+  1 Enhancement
   2 Bugfixes
 
 ----------------------------------------------------------------------
 1.7.3 update 1
 
+  Enhancement
+s:
+
+  - Exceptions for EN.*: Fig., St., middle name.
+
+  http://sourceforge.net/support/tracker.php?aid=1856354 
+  
   Bug fixes:
 
   - HTML entities not resolved in the XHTML filter 
